# lost-metrics-data

./: Cargo.toml  README.md
converter/: Cargo.toml
converter/src/: main.rs
src/: resources.rs
src/data/json/: StatTypes.json  ValidZones.json
src/data/messagepack/: Ability.mpk  CombatEffect.mpk  Esther.mpk  Npc.mpk  Skill.mpk  SkillBuff.mpk  SkillEffect.mpk  StatTypes.mpk  ValidZones.mpk
