[package]
name = "lost-metrics-data"
version = "0.1.0"
authors = ["averageeucplayer"]
edition = "2024"
rust-version = "1.85"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
rmp-serde = { version = "1.3.0", optional = true }
once_cell = "1.20.2"
hashbrown = { version = "0.15.0", features = ["serde"] }
lost-metrics-core = { git = "https://github.com/averageeucplayer/lost-metrics-core", branch="main" }

[features]
default = ["json"]
json = ["serde_json"]
msgpack = ["rmp-serde"]

[lints.rust]
unused_imports = "allow"
dead_code = "allow"