[package]
name = "converter"
version = "0.1.0"
authors = ["averageeucplayer"]
edition = "2024"
rust-version = "1.85"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
rmp-serde = { version = "1.3.0", optional = true }
once_cell = "1.20.2"
hashbrown = { version = "0.15.0", features = ["serde"] }
# lost-metrics-core = { git = "https://github.com/averageeucplayer/lost-metrics-core", branch="main" }
# lost-metrics-data = { git = "https://github.com/averageeucplayer/lost-metrics-data", branch="main" }
lost-metrics-core = { path= "../../lost-metrics-core" }
lost-metrics-data = { path= "../../lost-metrics-data" }

[lints.rust]
unused_imports = "allow"
dead_code = "allow"